Archive2/35/66145c2225357b/output
main.cpp:12:49: error: expected '(' for function-style cast or type construction
  std::sort(vec.begin(),vec.end(),std::less<int>);  //should be std::less<int>()
                                  ~~~~~~~~~~~~~~^
1 error generated.
